# books-ddd

./: Makefile  alembic.ini  pyproject.toml
alembic/versions/: 02b27e674ea7_create_book_table.py
books/: __init__.py
books/application/: book.py
books/domain/: book.py
books/infrastructure/: book.py  database.py
books/routes/: app.py
tests/: __init__.py  e2e.py  integration.py
